<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Carrito">

<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_200"
    android:backgroundTint="@color/fondoToolbar"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.Toolbar>

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/ic_baseline_menu_24"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar">

    <ImageButton
        android:id="@+id/ibtnFlechaRegreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:backgroundTint="@android:color/transparent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/nimbus_bold"
            android:text="@string/titulo_pantalla_carrito"
            android:textAllCaps="true"
            android:textColor="#686868"
            android:textSize="22sp" />

</LinearLayout>

    <ListView
        android:id="@+id/listaItemsCarrito"
        android:layout_width="389dp"
        android:layout_height="409dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:layout_width="372dp"
        android:layout_height="27dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="512dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/tvwSubtotal"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nimbus_bold"
            android:text="@string/text_lblSubtotal"
            android:textAllCaps="false"
            android:textColor="#686868"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvwNumeroArticulos"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nimbus_light"
            android:text="0 articulos"
            android:textAllCaps="false"
            android:textColor="#686868"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvwSubtotalDolares"
            android:layout_width="33dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/nimbus_bold"
            android:text="$ 0.00"
            android:textAllCaps="false"
            android:textColor="#686868"
            android:textSize="22sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnHacerPedidoCarrito"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/text_btn_hacer_pedido"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:background="@drawable/boton_redondeado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>